--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "pocketbase-docker-template",
+    "name": "pocketbase-docker",
     "private": true,
     "version": "0.0.1",
     "description": "A template for a dockerized pocketbase.",
